# prepper

./: Cargo.toml  README.md  schema.cddl
crates/prepper/: Cargo.toml
crates/prepper-event/: Cargo.toml
crates/prepper-event/src/: lib.rs  row_data.rs  tamanu_id.rs  timestamp.rs  uuid.rs
crates/prepper/src/: audit_sink.rs  error.rs  event_dir.rs  main.rs  postgres_sink.rs  state.rs
history/: _state.json  public.data.json
src/: audit_sink.rs  event.rs  main.rs  postgres_sink.rs  record_snapshot_schema.avsc  snapshot.rs
src/event/: row_data.rs  tamanu_id.rs  timestamp.rs
