[package]
name = "prepper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
jiff = "0.1.14"
miette = { version = "7.4.0", features = ["fancy"] }
pg-connection-string = "0.0.2"
pg_replicate = { git = "https://github.com/supabase/pg_replicate", branch = "main" }
postgres-types = { git = "https://github.com/imor/rust-postgres", default-features = false, rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
serde = { version = "1.0.209", features = ["derive", "rc"] }
serde_avro_derive = "0.3.1"
serde_avro_fast = { version = "2.0.0", features = ["zstandard"] }
serde_json = "1.0.127"
subtle-encoding = "0.5.1"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { git = "https://github.com/imor/rust-postgres", default-features = false, features = ["with-chrono-0_4"], rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
