[workspace]
resolver = "2"
members = [
	"crates/prepper",
	"crates/prepper-event",
]

[workspace.dependencies]
miette = "7.4.0"
num-bigint = "0.4.6"
pg_replicate = { git = "https://github.com/passcod/pg_replicate", branch = "patch-1" }
postgres-replication = { git = "https://github.com/imor/rust-postgres", default-features = false, rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
postgres-types = { git = "https://github.com/imor/rust-postgres", default-features = false, rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
tokio = "1.38.0"
tokio-postgres = { git = "https://github.com/imor/rust-postgres", default-features = false, rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }

[profile.release]
lto = false
codegen-units = 16
strip = "symbols"

[profile.dist]
inherits = "release"
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 0
codegen-units = 1024
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
